tests/ui/once_sync_lock_unsupported.rs
use cached::macros::once;

#[once(sync_lock = "mutex")]
fn f() -> i32 {
    42
}

fn main() {}
